--- a/webpack/app/scss/_search.scss
+++ b/webpack/app/scss/_search.scss
@@ -1,6 +1,7 @@
 /* busca */
 .template-busca,
-.template-filter-results {
+.template-filter-results,
+.document-finder-tile {
     form h1.documentFirstHeading {
         display: none;
         font-size: 2,25rem !important;
