--- a/webpack/app/scss/_search.scss
+++ b/webpack/app/scss/_search.scss
@@ -72,6 +72,19 @@
         float: none;
         display: none;
     }
+    #filters .filter-button {
+        height: 50px;
+        border-radius: 30px;
+        border: 0;
+        padding: 10px 20px;
+        background: #333;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: bold;
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+    }
 }
 #search-results-bar.open {
     border: 1px solid #ccc;
