--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -92,6 +92,29 @@ p.tile-description {
     }
 }
 
+/* lista-blocos */
+
+.lista-blocos .cover-collection-tile {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
+
+    .tile-header {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 20px;
+        font-size: 36px;
+        font-weight: 900;
+    }
+    .collection-item {
+        width: 22%;
+    }
+    .tile-footer {
+        width: 100%;
+        text-align: center;
+    }
+}
 /* box colorido */
 .tile.box-colorido {
     display: flex;
