--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -190,6 +190,7 @@ dd.image-caption {
   margin: 0 90px;
   padding: 20px 0;
   border-top: solid 0.5px #ccc;
+  position: relative;
 }
 
 #category {
@@ -452,4 +453,69 @@ ul.paginacao {
         background: transparent;
         color: #333;
     }
+}
+
+/* reportar erros */
+a#error-reporting-toggle {
+  font-weight: bold;
+  float: right;
+  text-transform: uppercase;
+  font-size: .85rem;
+  color: #333;
+  margin-top: 22px;
+}
+a#error-reporting-toggle::after {
+  content: "^";
+  background: #222;
+  color: #fff;
+  border-radius: 50%;
+  padding: 3px 5px 5px 5px;
+  display: block;
+  float: right;
+  width: 15px;
+  height: 15px;
+  text-align: center;
+  font-size: 1.4em;
+  margin: -3px 0 0 10px;
+  font-weight: 700;
+  transform: rotate(180deg);
+}
+a#error-reporting-toggle.open::after {
+  transform: rotate(0deg);
+}
+#error-reporting {
+  background-color: #f9f9f9;
+  border: solid 1px #e5e5e5;
+  clear: right;
+  margin-top: 80px;
+}
+#error-reporting h1.documentFirstHeading,
+#error-reporting .documentByLine {
+  display: none;
+}
+#error-reporting #content {
+  width: 60%;
+  margin: 68px auto;
+}
+#error-reporting input[type="text"] {
+  width: 100%;
+  height: 30px;
+}
+#error-reporting h2 {
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 50px
+}
+#error-reporting .formControls {
+  text-align: center;
+}
+#error-reporting .formControls input {
+  height: 50px;
+  border-radius: 30px;
+  border: 0;
+  padding: 10px 40px;
+  background: #333;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
 }
