--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -488,34 +488,41 @@ a#error-reporting-toggle.open::after {
   border: solid 1px #e5e5e5;
   clear: right;
   margin-top: 80px;
-}
-#error-reporting h1.documentFirstHeading,
-#error-reporting .documentByLine {
-  display: none;
-}
-#error-reporting #content {
-  width: 60%;
-  margin: 68px auto;
-}
-#error-reporting input[type="text"] {
-  width: 100%;
-  height: 30px;
-}
-#error-reporting h2 {
-  text-align: center;
-  font-weight: 500;
-  margin-bottom: 50px
-}
-#error-reporting .formControls {
-  text-align: center;
-}
-#error-reporting .formControls input {
-  height: 50px;
-  border-radius: 30px;
-  border: 0;
-  padding: 10px 40px;
-  background: #333;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 700;
+
+  h1.documentFirstHeading,
+  .documentByLine {
+    display: none;
+  }
+
+  #content {
+    width: 60%;
+    margin: 68px auto;
+  }
+
+  input[type="text"] {
+    width: 100%;
+    height: 30px;
+  }
+
+  h2 {
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 50px
+  }
+
+  .formControls {
+    text-align: center;
+  }
+
+  .formControls input {
+    height: 50px;
+    border-radius: 30px;
+    border: 0;
+    padding: 10px 40px;
+    background: #333;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
+
 }
