--- a/webpack/app/scss/_tiles.scss
+++ b/webpack/app/scss/_tiles.scss
@@ -75,7 +75,7 @@ p.tile-description {
 #content a.outstanding-link:hover {
 	background: #06ACFF;
 	border-color: #06ACFF !important;
-	color: #fff !important;
+	color: #fff!important;
 }
 
 .tile {
@@ -521,7 +521,7 @@ header.inverter .search-wrapper {
     } 
     a:hover {
         background: #0094ff;
-        color: #fff !important;
+        color: #fff;
         border: solid 2px #0094ff !important;
     }
     .tile-header h2 {
