Agrupa regras similares

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -458,10 +458,7 @@ ul.paginacao {
   font-family: Raleway, sans-serif;
 }
 #content .ui-datepicker .ui-datepicker-month, 
-body .ui-datepicker .ui-datepicker-month {
-  font-family: Raleway, sans-serif;
-  font-size: 0.875rem;
-}
+body .ui-datepicker .ui-datepicker-month,
 .portaltype-agenda #content .search-form .searchField, 
 .portaltype-agendadiaria #content .search-form .searchField {
   font-family: Raleway, sans-serif;
