Ajustes de fonte na agenda (#185)
* Ajustes de fonte na agenda

* Remove ajustes desnecessários

* Agrupa regras similares

* Add changelog

--- a/webpack/app/scss/_content.scss
+++ b/webpack/app/scss/_content.scss
@@ -453,6 +453,18 @@ ul.paginacao {
     }
 }
 
+/* agenda */
+.ui-widget {
+  font-family: Raleway, sans-serif;
+}
+#content .ui-datepicker .ui-datepicker-month, 
+body .ui-datepicker .ui-datepicker-month,
+.portaltype-agenda #content .search-form .searchField, 
+.portaltype-agendadiaria #content .search-form .searchField {
+  font-family: Raleway, sans-serif;
+  font-size: 0.875rem;
+}
+
 /* reportar erros */
 a#error-reporting-toggle {
   font-weight: bold;
